--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -1,8 +1,11 @@
 <ion-tabs>
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="home" href="/tabs/home">
-      <ion-icon aria-hidden="true" name="home"></ion-icon>
-      <ion-label>Home</ion-label>
+      <ion-icon
+        aria-hidden="true"
+        name="{{ tabs?.getSelected() == 'home' ? 'home' : 'home-outline' }}"
+      ></ion-icon>
+      <ion-label>Início</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
