--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -1,11 +1,39 @@
 <ion-tabs>
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="home" href="/tabs/home">
+    <ion-tab-button tab="bicycle" href="/tabs/bicycle">
       <ion-icon
         aria-hidden="true"
-        name="{{ tabs?.getSelected() == 'home' ? 'home' : 'home-outline' }}"
+        name="{{ tabs?.getSelected() == 'bicycle' ? 'bicycle' : 'bicycle-outline' }}"
       ></ion-icon>
-      <ion-label>Início</ion-label>
+      <ion-label>Motos</ion-label>
+    </ion-tab-button>
+    <ion-tab-button tab="customer" href="/tabs/customer">
+      <ion-icon
+        aria-hidden="true"
+        name="{{ tabs?.getSelected() == 'person' ? 'person' : 'person-outline' }}"
+      ></ion-icon>
+      <ion-label>Clientes</ion-label>
+    </ion-tab-button>
+    <ion-tab-button tab="work" href="/tabs/work">
+      <ion-icon
+        aria-hidden="true"
+        name="{{ tabs?.getSelected() == 'build' ? 'build' : 'build-outline' }}"
+      ></ion-icon>
+      <ion-label>Serviços</ion-label>
+    </ion-tab-button>
+    <ion-tab-button tab="products" href="/tabs/products">
+      <ion-icon
+        aria-hidden="true"
+        name="{{ tabs?.getSelected() == 'storefront' ? 'storefront' : 'storefront-outline' }}"
+      ></ion-icon>
+      <ion-label>Produtos</ion-label>
+    </ion-tab-button>
+    <ion-tab-button tab="order" href="/tabs/order">
+      <ion-icon
+        aria-hidden="true"
+        name="{{ tabs?.getSelected() == 'bag' ? 'bag' : 'bag-outline' }}"
+      ></ion-icon>
+      <ion-label>Pedidos</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
