--- a/src/app/pages/motorcycle/motorcycle.page.html
+++ b/src/app/pages/motorcycle/motorcycle.page.html
@@ -1,13 +1,18 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>Motos</ion-title>
+    <ion-buttons slot="end">
+      <ion-button (click)="addMotorcycle()">
+        <ion-icon name="add-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Motos</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-searchbar
+    placeholder="Buscar moto"
+    animated="true"
+    debounce="500"
+  ></ion-searchbar>
 </ion-content>
