--- a/src/app/pages/motorcycle/motorcycle.page.html
+++ b/src/app/pages/motorcycle/motorcycle.page.html
@@ -3,7 +3,7 @@
     <ion-title>Motos</ion-title>
     <ion-buttons slot="end">
       <ion-button (click)="openModal()">
-        <ion-icon name="add-outline"></ion-icon>
+        <span class="material-symbols-outlined button-icon">add</span>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
@@ -26,7 +26,7 @@
     <ion-spinner></ion-spinner>
   </div>
 
-  } @if (!loading && filteredMotorcycles.length === 0) {
+  } @if (!loading && filteredMotorcycles().length === 0) {
   <div
     class="empty-state ion-display-flex ion-flex-column ion-justify-content-center ion-align-items-center"
   >
@@ -38,7 +38,7 @@
     </ion-button>
   </div>
 
-  } @if (!loading && filteredMotorcycles.length > 0) {
+  } @if (!loading && filteredMotorcycles().length > 0) {
   <ion-list>
     @for (motorcycle of filteredMotorcycles(); track $index) {
     <ion-card>
@@ -52,7 +52,7 @@
         <p>Cliente: {{getCustomerName(motorcycle.customerId)}}</p>
         <div>
           <ion-button fill="clear" size="small" (click)="openModal()">
-            <ion-icon name="create-outline"></ion-icon>
+           <span class="material-symbols-outlined">edit</span>
           </ion-button>
           <ion-button
             fill="clear"
@@ -60,7 +60,7 @@
             color="danger"
             (click)="deleteMotorcycle(motorcycle)"
           >
-            <ion-icon name="trash-outline"></ion-icon>
+            <span class="material-symbols-outlined">delete</span>
           </ion-button>
         </div>
       </ion-card-content>
