--- a/src/app/pages/customers/customers-form.modal.html
+++ b/src/app/pages/customers/customers-form.modal.html
@@ -1,36 +1,47 @@
 <ion-header>
   <div class="modal-title-container">
-    <h2 class="modal-title">{{ isEdit() ? 'Editar Cliente' : 'Adicionar Cliente' }}</h2>
+    <h2 class="modal-title">
+      {{ isEdit() ? 'Editar Cliente' : 'Adicionar Cliente' }}
+    </h2>
   </div>
 </ion-header>
 
 <ion-content class="ion-padding">
   <form [formGroup]="form" (ngSubmit)="createOrUpdate()">
     <ion-list lines="none">
-
       <!-- Nome -->
-      <ion-item [class.has-error]="form.get('name')?.invalid && form.get('name')?.touched">
-        <ion-input 
-          formControlName="name" 
-          label="Nome" 
-          labelPlacement="stacked" 
-          placeholder="Digite o nome do cliente">
+      <ion-item
+        [class.has-error]="form.get('name')?.invalid && form.get('name')?.touched"
+      >
+        <ion-input
+          formControlName="name"
+          label="Nome"
+          labelPlacement="stacked"
+          placeholder="Digite o nome do cliente"
+        >
         </ion-input>
       </ion-item>
-      <ng-container *ngIf="form.get('name')?.invalid && form.get('name')?.touched">
+      <ng-container
+        *ngIf="form.get('name')?.invalid && form.get('name')?.touched"
+      >
         <span class="error-message">Nome é obrigatório</span>
       </ng-container>
 
       <!-- Telefone -->
-      <ion-item [class.has-error]="form.get('phone')?.invalid && form.get('phone')?.touched">
-        <ion-input 
-          formControlName="phone" 
-          label="Telefone" 
-          labelPlacement="stacked" 
-          placeholder="Digite o telefone do cliente">
+      <ion-item
+        [class.has-error]="form.get('phone')?.invalid && form.get('phone')?.touched"
+      >
+        <ion-input
+          formControlName="phone"
+          label="Telefone"
+          labelPlacement="stacked"
+          placeholder="Digite o telefone do cliente"
+        >
         </ion-input>
       </ion-item>
-      <ng-container *ngIf="form.get('phone')?.invalid && form.get('phone')?.touched">
+      <ng-container
+        *ngIf="form.get('phone')?.invalid && form.get('phone')?.touched"
+      >
         <span class="error-message">Telefone é obrigatório</span>
       </ng-container>
 
@@ -44,14 +55,13 @@
           Nenhum veículo cadastrado.
         </ion-item>
       </ion-list>
-
     </ion-list>
 
     <div class="modal-actions">
-      <ion-button fill="clear" color="medium" (click)="closeModal()">Cancelar</ion-button>
-      <ion-button 
-        type="submit" 
-        [disabled]="form.invalid">
+      <ion-button fill="clear" color="medium" (click)="closeModal()"
+        >Cancelar</ion-button
+      >
+      <ion-button type="submit" [disabled]="form.invalid">
         {{ isEdit() ? 'Atualizar' : 'Salvar' }}
       </ion-button>
     </div>
