--- a/src/app/pages/customers/customers-form.modal.html
+++ b/src/app/pages/customers/customers-form.modal.html
@@ -1,69 +1,93 @@
 <ion-header>
-  <div class="modal-title-container">
-    <h2 class="modal-title">
-      {{ isEdit() ? 'Editar Cliente' : 'Adicionar Cliente' }}
-    </h2>
-  </div>
+  <ion-toolbar>
+    <ion-title>{{ isEdit() ? 'Editar Cliente' : 'Adicionar Cliente' }}</ion-title>
+    <ion-buttons slot="end">
+      <ion-button fill="clear" (click)="closeModal()">
+        <ion-icon name="close"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+  </ion-toolbar>
 </ion-header>
 
 <ion-content class="ion-padding">
   <form [formGroup]="form" (ngSubmit)="createOrUpdate()">
-    <ion-list lines="none">
-      <!-- Nome -->
-      <ion-item
-        [class.has-error]="form.get('name')?.invalid && form.get('name')?.touched"
-      >
-        <ion-input
-          formControlName="name"
-          label="Nome"
-          labelPlacement="stacked"
-          placeholder="Digite o nome do cliente"
-        >
-        </ion-input>
-      </ion-item>
-      <ng-container
-        *ngIf="form.get('name')?.invalid && form.get('name')?.touched"
-      >
-        <span class="error-message">Nome é obrigatório</span>
-      </ng-container>
+    <ion-card>
+      <ion-card-content>
+        <ion-list lines="full">
+          <!-- Nome -->
+          <ion-item>
+            <ion-icon name="person" slot="start"></ion-icon>
+            <ion-input
+              formControlName="name"
+              label="Nome"
+              labelPlacement="stacked"
+              placeholder="Digite o nome do cliente"
+              [class.ion-invalid]="form.get('name')?.invalid && form.get('name')?.touched"
+              errorText="Nome é obrigatório"
+            >
+            </ion-input>
+          </ion-item>
 
-      <!-- Telefone -->
-      <ion-item
-        [class.has-error]="form.get('phone')?.invalid && form.get('phone')?.touched"
-      >
-        <ion-input
-          formControlName="phone"
-          label="Telefone"
-          labelPlacement="stacked"
-          placeholder="Digite o telefone do cliente"
-        >
-        </ion-input>
-      </ion-item>
-      <ng-container
-        *ngIf="form.get('phone')?.invalid && form.get('phone')?.touched"
-      >
-        <span class="error-message">Telefone é obrigatório</span>
-      </ng-container>
+          <!-- Telefone -->
+          <ion-item>
+            <ion-icon name="call" slot="start"></ion-icon>
+            <ion-input
+              formControlName="phone"
+              label="Telefone"
+              labelPlacement="stacked"
+              placeholder="Digite o telefone do cliente"
+              [class.ion-invalid]="form.get('phone')?.invalid && form.get('phone')?.touched"
+              errorText="Telefone é obrigatório"
+            >
+            </ion-input>
+          </ion-item>
+        </ion-list>
+      </ion-card-content>
+    </ion-card>
 
-      <!-- Lista de motos -->
-      <h3 class="section-title">Veículos do Cliente</h3>
-      <ion-list>
-        <ion-item *ngFor="let m of motorcyclesCustomer()">
-          {{ m.model }} - {{ m.plate }} - {{ m.year }}
-        </ion-item>
-        <ion-item *ngIf="motorcyclesCustomer().length === 0">
-          Nenhum veículo cadastrado.
-        </ion-item>
-      </ion-list>
-    </ion-list>
+    <!-- Lista de motos -->
+    <ion-card *ngIf="isEdit()">
+      <ion-card-header>
+        <ion-card-title>Veículos do Cliente</ion-card-title>
+      </ion-card-header>
+      <ion-card-content>
+        <ion-list lines="none">
+          <ion-item *ngFor="let m of motorcyclesCustomer()">
+            <ion-icon name="car" slot="start"></ion-icon>
+            <ion-label>
+              <h3>{{ m.model }}</h3>
+              <p>{{ m.plate }} - {{ m.year }}</p>
+            </ion-label>
+          </ion-item>
+          <ion-item *ngIf="motorcyclesCustomer().length === 0">
+            <ion-icon name="information-circle" slot="start" color="medium"></ion-icon>
+            <ion-label color="medium">Nenhum veículo cadastrado</ion-label>
+          </ion-item>
+        </ion-list>
+      </ion-card-content>
+    </ion-card>
 
-    <div class="modal-actions">
-      <ion-button fill="clear" color="medium" (click)="closeModal()"
-        >Cancelar</ion-button
-      >
-      <ion-button type="submit" [disabled]="form.invalid">
-        {{ isEdit() ? 'Atualizar' : 'Salvar' }}
-      </ion-button>
-    </div>
+    <ion-grid class="ion-padding-top">
+      <ion-row>
+        <ion-col size="6">
+          <ion-button 
+            fill="outline" 
+            color="medium" 
+            expand="block"
+            (click)="closeModal()">
+            Cancelar
+          </ion-button>
+        </ion-col>
+        <ion-col size="6">
+          <ion-button
+            type="submit"
+            expand="block"
+            [disabled]="form.invalid">
+            <ion-icon name="{{ isEdit() ? 'save' : 'add' }}" slot="start"></ion-icon>
+            {{ isEdit() ? 'Salvar' : 'Adicionar' }}
+          </ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
   </form>
 </ion-content>
